--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-md-12">
-		    		<h1>I'm Sigit Setiaji</h1>
+    				<h1 class='typed'>
+					    <span class='js-typed'></span>
+					</h1>
+		    		<!-- <h1>I'm Sigit Setiaji</h1>
 		    		<h1>I'm Web Developer</h1>	
-		    		<h1>Live In Jakarta</h1>
+		    		<h1>Live In Jakarta</h1> -->
 			    	<div class="social-link">
 			    		<a href="#">
 							<i class="fa fa-facebook" style="font-size:30px;"></i>
