--- a/index.html
+++ b/index.html
@@ -10,40 +10,31 @@
 	<link rel="stylesheet" href="assets/css/ekko-lightbox.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
-	<nav class="navbar navbar-default navbar-fixed-top">
+<body id="page-top">
+	<nav class="navbar navbar-expand-lg navbar-light navbar-default navbar-fixed-top" id="mainNav">
 		<div class="container">
-			<div class="navbar-header">
-		        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-		          <span class="icon-bar"></span>
-		          <span class="icon-bar"></span>
-		          <span class="icon-bar"></span>                        
-		      	</button>
-	      		<a class="navbar-brand" href="index.html">Sigit.</a>
-	      	</div>
-	      	<div>
-	      		<div class="collapse navbar-collapse" id="myNavbar">
-		      		<ul class="nav navbar-nav navbar-right">
-		      			<li class="nav-item">
-		      				<a class="nav-link js-scroll-trigger" href="#home" >Home</a>
-		      			</li>
-		      			<li class="nav-item">
-		      				<a class="nav-link js-scroll-trigger" href="#about">About</a>
-		      			</li>
-		      			<li class="nav-item">
-		      				<a class="nav-link js-scroll-trigger" href="#service">Service</a>
-		      			</li>
-		      			<li class="nav-item">
-		      				<a class="nav-link js-scroll-trigger" href="#works">Portofolio</a>
-		      			</li>
-		      			<li class="nav-item">
-		      				<a class="nav-link js-scroll-trigger" href="#blogs">Blog</a>
-		      			</li>
-		      			<li class="nav-item">
-		      				<a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-		      			</li>
-		      		</ul>
-		      	</div>
+	      	<a class="navbar-brand js-scroll-trigger" href="#">Sigit.</a>
+      		<div class="collapse navbar-collapse" id="navbarResponsive">
+	      		<ul class="nav navbar-nav navbar-right ml-auto">
+	      			<li class="nav-item">
+	      				<a class="nav-link js-scroll-trigger" href="#home" >Home</a>
+	      			</li>
+	      			<li class="nav-item">
+	      				<a class="nav-link js-scroll-trigger" href="#about">About</a>
+	      			</li>
+	      			<li class="nav-item">
+	      				<a class="nav-link js-scroll-trigger" href="#service">Service</a>
+	      			</li>
+	      			<li class="nav-item">
+	      				<a class="nav-link js-scroll-trigger" href="#works">Portofolio</a>
+	      			</li>
+	      			<li class="nav-item">
+	      				<a class="nav-link js-scroll-trigger" href="#blogs">Blog</a>
+	      			</li>
+	      			<li class="nav-item">
+	      				<a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+	      			</li>
+	      		</ul>
 	      	</div>
       	</div>
     </nav>
@@ -53,9 +44,9 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-md-12">
-    				<h1 class="typed judul">
-					    <span class="js-typed"></span>
-					</h1>
+	    			<h1 class='typed'>
+    					<span class='js-typed'></span>
+ 					</h1>
 			    	<div class="social-link">
 			    		<a href="#">
 							<i class="fa fa-facebook" style="font-size:30px;"></i>
@@ -175,7 +166,7 @@
     <!-- works -->
     <section id="works">
     	<div class="container">
-		<!-- <div class="work-section"> -->
+		<div class="work-section">
 			<div class="row">
 				<div class="col-md-12">
 					<h2 class="judul">LATES WORKS</h2>
@@ -189,7 +180,7 @@
 					<button class="btn btn-default filter-button" data-filter="anim">Animation</button>
 				</div>
 			</div>	
-		<!-- </div> -->
+		</div>
 			<div class="row">
 				<div class="col-md-4 filter dev">
 					<a href="assets/images/porto-1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
@@ -208,7 +199,6 @@
 				</div>
 			</div>
 			<div class="row">
-
 				<div class="col-md-4 filter des photo anim">
 					<a href="assets/images/porto-5.jpg" data-toggle="lightbox" data-gallery="example-gallery">
 						<img src="assets/images/porto-5.jpg" class="img-fluid">
