--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<meta name="description" content>
 	<meta name="author" content>
 	<link rel="stylesheet" href="assets/css/bootstrap.css">
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/jquery-ui.min.css">
 	<link rel="stylesheet" href="assets/css/ekko-lightbox.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body id="page-top">
 	<nav class="navbar navbar-expand-lg navbar-light navbar-default navbar-fixed-top" id="mainNav">
@@ -431,6 +432,7 @@
 
 
 	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery-ui.min.js"></script>
 	<script src="assets/js/bootstrap.js"></script>
 	<script src="assets/js/ekko-lightbox.js"></script>
 	<script src="assets/js/scrollspy.js"></script>
