--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="page-top">
 	<nav class="navbar navbar-expand-lg navbar-light navbar-default navbar-fixed-top" id="mainNav">
 		<div class="container">
-	      	<a class="navbar-brand js-scroll-trigger" href="#">Sigit.</a>
+			<a class="navbar-brand js-scroll-trigger" href="#page-top">Sigit Setiaji</a>
       		<div class="collapse navbar-collapse" id="navbarResponsive">
 	      		<ul class="nav navbar-nav navbar-right ml-auto">
 	      			<li class="nav-item">
@@ -41,33 +41,32 @@
     </nav>
 
     <!-- bagian home -->
-    <section id="home" class="parallax-1">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-md-12">
-	    			<h1 class='typed'>
-    					<span class='js-typed'></span>
- 					</h1>
-			    	<div class="social-link">
-			    		<a href="#">
-							<i class="fa fa-facebook" style="font-size:30px;"></i>
-						</a>
-						<a href="#">
-							<i class="fa fa-linkedin" style="font-size:30px;"></i>
-						</a><a href="#">
-							<i class="fa fa-twitter" style="font-size:30px;"></i>
-						</a>
-						<a href="#">
-							<i class="fa fa-google-plus" style="font-size:30px;"></i>
-						</a>
-						<a href="#">
-							<i class="fa fa-behand" style="font-size:30px;"></i>
-						</a>
-			    	</div>
-			    </div>
-	    	</div>
+    <header id="home" class="masthead">
+      	<div class="header-content">
+        	<div class="header-content-inner">
+          		<h1 id="homeHeading" class='typed'>
+					<span class='js-typed'></span>
+				</h1>
+				<hr>
+		    	<div class="social-link">
+		    		<a href="#">
+						<i class="fa fa-facebook" style="font-size:36px;"></i>
+					</a>
+					<a href="#">
+						<i class="fa fa-linkedin" style="font-size:36px;"></i>
+					</a><a href="#">
+						<i class="fa fa-twitter" style="font-size:36px;"></i>
+					</a>
+					<a href="#">
+						<i class="fa fa-google-plus" style="font-size:36px;"></i>
+					</a>
+					<a href="#">
+						<i class="fa fa-behand" style="font-size:36px;"></i>
+					</a>
+		    	</div>
+		    </div>
 	    </div>
-    </section>
+    </header>
     <!-- bagian about -->
     <section id="about">
     	<div class="container">
