--- a/index.html
+++ b/index.html
@@ -166,70 +166,72 @@
     <!-- works -->
     <section id="works">
     	<div class="container">
-		<div class="work-section">
-			<div class="row">
-				<div class="col-md-12">
-					<h2 class="judul">LATES WORKS</h2>
-					<hr>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia nisi, delectus veniam!
-					</p>
-					<button class="btn btn-default filter-button" data-filter="all">ALL</button>
-					<button class="btn btn-default filter-button" data-filter="des">Design</button>
-					<button class="btn btn-default filter-button" data-filter="dev">Development</button>
-					<button class="btn btn-default filter-button" data-filter="photo">Photography</button>
-					<button class="btn btn-default filter-button" data-filter="anim">Animation</button>
-				</div>
-			</div>	
-		</div>
-			<div class="row">
-				<div class="col-md-4 filter dev">
-					<a href="assets/images/porto-1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-						<img src="assets/images/porto-1.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-md-4 filter photo anim">
-					<a href="assets/images/porto-2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-						<img src="assets/images/porto-2.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-md-4 filter des">
-					<a href="assets/images/porto-3.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-						<img src="assets/images/porto-3.jpg" class="img-fluid">
-					</a>
-				</div>
+			<div class="work-section">
+				<div class="row">
+					<div class="col-md-12">
+						<h2 class="judul">LATES WORKS</h2>
+						<hr>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia nisi, delectus veniam!
+						</p>
+						<button class="btn btn-default filter-button" data-filter="all">ALL</button>
+						<button class="btn btn-default filter-button" data-filter="des">Design</button>
+						<button class="btn btn-default filter-button" data-filter="dev">Development</button>
+						<button class="btn btn-default filter-button" data-filter="photo">Photography</button>
+						<button class="btn btn-default filter-button" data-filter="anim">Animation</button>
+					</div>
+				</div>	
 			</div>
-			<div class="row">
-				<div class="col-md-4 filter des photo anim">
-					<a href="assets/images/porto-5.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-						<img src="assets/images/porto-5.jpg" class="img-fluid">
-					</a>
+			<div class="row mansonry">
+				<div class="post-box col-md-4 ">
+					<div class="filter dev">
+						<a href="assets/images/porto-1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+							<img src="assets/images/porto-1.jpg" class="img-responsive img-thumbnail">
+						</a>
+					</div>
+					<div class="filter filter des photo anim">
+						<a href="assets/images/porto-5.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+							<img src="assets/images/porto-5.jpg" class="img-responsive img-thumbnail">
+						</a>
+					</div>
+					<div class="filter filter anim">
+						<a href="assets/images/porto-7.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+							<img src="assets/images/porto-7.jpg" class="img-responsive img-thumbnail">
+						</a>
+					</div>
 				</div>
-				<div class="col-md-4 filter anim">
-					<a href="assets/images/porto-4.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-						<img src="assets/images/porto-4.jpg" class="img-fluid">
-					</a>
+				<div class="post-box col-md-4">
+					<div class="filter filter photo anim">
+						<a href="assets/images/porto-2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+							<img src="assets/images/porto-2.jpg" class="img-responsive img-thumbnail">
+						</a>
+					</div>
+					<div class="filter filter des">
+						<a href="assets/images/porto-4.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+							<img src="assets/images/porto-4.jpg" class="img-responsive img-thumbnail">
+						</a>
+					</div>
+					<div class="filter filter dev">
+						<a href="assets/images/porto-9.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+							<img src="assets/images/porto-9.jpg" class="img-responsive img-thumbnail">
+						</a>
+					</div>
 				</div>
-				<div class="col-md-4 filter dev">
-					<a href="assets/images/porto-6.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-						<img src="assets/images/porto-6.jpg" class="img-fluid">
-					</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 filter des">
-					<a href="assets/images/porto-7.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-						<img src="assets/images/porto-7.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-md-4 filter des dev">
-					<a href="assets/images/porto-9.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-						<img src="assets/images/porto-9.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-md-4 filter anim">
-					<a href="assets/images/porto-8.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-						<img src="assets/images/porto-8.jpg" class="img-fluid">
-					</a>
+				<div class="post-box col-md-4">
+					<div class="filter filter des">
+						<a href="assets/images/porto-3.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+							<img src="assets/images/porto-3.jpg" class="img-responsive img-thumbnail">
+						</a>
+					</div>
+					<div class="filter filter dev des">
+						<a href="assets/images/porto-6.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+							<img src="assets/images/porto-6.jpg" class="img-responsive img-thumbnail">
+						</a>
+					</div>
+					<div class="filter filter anim">
+						<a href="assets/images/porto-8.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+							<img src="assets/images/porto-8.jpg" class="img-responsive img-thumbnail">
+						</a>
+					</div>
 				</div>
 			</div>
     	</div>
@@ -316,7 +318,7 @@
 				                <div class="item active">
 				                    <div class="carousel-content">
 				                        <div>
-				                            <i class="fa fa-quote-left"></i>
+				                            <i class="fa fa-quote-left" style="font-size: 36px;"></i>
 								        	<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
 								        	<br>Nullam id dolor id nibh ultricies vehicula ut id elit
 								        	</p>
@@ -328,7 +330,7 @@
 				                <div class="item">
 				                    <div class="carousel-content">
 				                        <div>
-				                            <i class="fa fa-quote-left"></i>
+				                            <i class="fa fa-quote-left" style="font-size: 36px;"></i>
 								        	<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
 								        	<br>Nullam id dolor id nibh ultricies vehicula ut id elit
 								        	</p>
@@ -340,7 +342,7 @@
 				                <div class="item">
 				                    <div class="carousel-content">
 				                        <div>                          
-				                            <i class="fa fa-quote-left"></i>
+				                            <i class="fa fa-quote-left" style="font-size: 36px;"></i>
 								        	<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
 								        	<br>Nullam id dolor id nibh ultricies vehicula ut id elit
 								        	</p>
